# numsim-5

./: .gitignore  .~lock.presentation.odp#  CMakeLists.txt  README.md  SConscript  SConstruct  custom.py  presentation.odp
geom/: cav128.geom  cav32.geom  cav64.geom  cavity.geom  cavityObstacles.geom  fun256.geom  karman.geom  posWithBadParam.geom  step.geom  step128.geom  trap.geom
media/: Messungen.ods  animation.ogv
param/: cavity.param  def128.param  def256.param  default.param  karman.param  trap.param
src/: argvparser.hpp  compute.cpp  compute.cu  compute.hpp  distri.cpp  distri.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  iterator.cpp  iterator.hpp  main.cpp  parameter.cpp  parameter.hpp  typedef.hpp  visu.cpp  visu.hpp  vtk.cpp  zeitgeist.hpp
